# effects-sequences

./: .gitmodules  README.md  cabal.project  effects-sequences.cabal
src/Control/: Effect.hs
src/Control/Effect/: Cut.hs  Exception.hs  Fail.hs  Internal.hs  Nondeterminism.hs  Reader.hs  State.hs  Symbol.hs  Writer.hs
src/Data/Effect/: BinaryTree.hs  Sequence.hs  Union.hs
src/Data/Effect/Higher/: Functor.hs
