name:                effects-sequences
version:             0.0.0.0
synopsis:            Extensible effects à la Oleg + more & fancier sequences.
-- description:
homepage:            https://github.com/robrix/effects-sequences
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2018 Rob Rix
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Effect
                     , Control.Effect.Cut
                     , Control.Effect.Exception
                     , Control.Effect.Fail
                     , Control.Effect.Internal
                     , Control.Effect.Nondeterminism
                     , Control.Effect.Reader
                     , Control.Effect.State
                     , Control.Effect.Symbol
                     , Control.Effect.Writer
                     , Data.Effect.Sequence
                     , Data.Effect.Union
  build-depends:       base >=4.11 && <4.12
                     , type-aligned
  hs-source-dirs:      src
  default-language:    Haskell2010
